syntax = "proto3";

package proto;

message EncryptedMsg {
  string msgId = 1;
  string type = 2;
  bytes msg = 3;
}
