syntax = "proto3";

package proto;

message FinishRsp {
}
