syntax = "proto3";

package proto;

import "Point.proto";

message FlightPathMsg {
  repeated Point points = 1;
}
